objects/Salesforce_Request__c.object
<CustomObject>
    <fields>
        <fullName>RunninguserAssigned__c</fullName>
        <description>Used for List Views for Assigned</description>
        <formula>IF(Assigned_To__c = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RunninguserisAssigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Updated by Salesforce team. You will receive emails to let you know where your request stands.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Consideration</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Admin_Notes__c</fullName>
        <inlineHelpText>Only those with a System Admin profile can see this field.  Use for conversation that is not appropriate for Chatter, as all users can see comments made there.</inlineHelpText>
        <label>System Admin Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Territory_of_Employee__c</fullName>
        <description>Territory of the employee related to this request</description>
        <inlineHelpText>Territory of the employee related to this request</inlineHelpText>
        <label>Territory of Employee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Outcome_Details__c</fullName>
        <description>This field is required before the request can be marked as Closed.  Intended use is to provide detail on what was done in regards to the ticket - formulas, workflows, report links, etc.  If a ticket is closed without action, explain why here.</description>
        <inlineHelpText>This field is required before the request can be marked as Closed.  Intended use is to provide detail on what was done in regards to the ticket - formulas, workflows, report links, etc.  If a ticket is closed without action, explain why here.</inlineHelpText>
        <label>Ticket Outcome Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Training_Type_Days_Prefered__c</fullName>
        <description>Used to gather additional details on request</description>
        <inlineHelpText>Training Request- Select the type of training you are looking to complete - - -
Off Lease Inspection Schedule Request - Select prefered days of the week to be scheduled - - -
Employment Status Request - Select which days in a week to have employee work</inlineHelpText>
        <label>Training / Days  Preferred or Available</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>My_Request_Is_Related_To__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Off-lease (ASI)</fullName>
                </value>
                <value>
                    <fullName>WholeSale (CR)</fullName>
                    <label>Wholesale (CR)</label>
                </value>
                <value>
                    <fullName>Retail (Trueframe)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <description>This field is for the Analytics team to track the urgency of requests and inquiry tickets</description>
        <inlineHelpText>Level of Urgency for this ticket to be completed. 1 = 2 weeks, 2-4 = 1 week,5-6 = 3-5 days, 7 = 2 days, 8-9 =Tomorrow, 10 = Today.</inlineHelpText>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will automatically update to reflect the person assigned to your request.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Location_Confirmed__c</fullName>
        <description>Question for unwind requests specifically, intended to help streamline the time it takes to ask this question and re-assign.</description>
        <inlineHelpText>Required for Unwind Requests ONLY</inlineHelpText>
        <label>Has the vehicle location been confirmed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>With seller</fullName>
                </value>
                <value>
                    <fullName>Picked-up by buyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wont_Be_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Won&apos;t Be Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X15_Min_Field__c</fullName>
        <formula>CreatedDate -45*0.00069</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>15 Min Field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>d2subd1__c</fullName>
        <formula>Date_Time_Closed__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>d2subd1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Requests &amp; Inquiries</label>
    <listViews>
        <fullName>ACV_Capital_Tickets_Open</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Ticket_Outcome_Details__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Jira_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Salesforce_Request__c.Salesforce_Request</value>
        </filters>
        <filters>
            <field>Related_Departments__c</field>
            <operation>equals</operation>
            <value>ACV Capital</value>
        </filters>
        <filters>
            <field>Requester_Profile__c</field>
            <operation>contains</operation>
            <value>cap</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Completed,Rejected</value>
        </filters>
        <label>ACV Capital Salesforce Tickets - Open</label>
    </listViews>
    <listViews>
        <fullName>Abandoned_Vehicle_Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Escalate__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Salesforce_Request__c.Ops_Help</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,In Progress</value>
        </filters>
        <filters>
            <field>My_Request_Is_Related_To__c</field>
            <operation>equals</operation>
            <value>Abandoned Vehicle</value>
        </filters>
        <label>Abandoned Vehicle Open Requests</label>
    </listViews>
    <listViews>
        <fullName>Alan_s_Assigned_Tickets</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>pinkhasik</value>
        </filters>
        <label>Alan&apos;s Assigned Tickets</label>
        <sharedTo>
            <group>Enterprise_Apps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alex_s_Assigned_Tickets</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Alex Rabey</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:120</value>
        </filters>
        <label>Alex&apos;s Assigned Tickets</label>
        <sharedTo>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>My_Request_Is_Related_To__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Max Kaplan</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_48_Hour_Notices</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Time_Closed__c</columns>
        <columns>Status__c</columns>
        <columns>Requester_Profile__c</columns>
        <columns>Auction__c</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Reasons__c</field>
            <operation>includes</operation>
            <value>48 Hour Notice</value>
        </filters>
        <label>All 48 Hour Notices</label>
    </listViews>
    <listViews>
        <fullName>All_Inspector_Mgmt_Requests</fullName>
        <columns>NAME</columns>
        <columns>My_Request_Is_Related_To__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Request_Is_Related_To__c</field>
            <operation>equals</operation>
            <value>Employment Status Request,Training Schedule Request,Off-lease Inspection Schedule Request</value>
        </filters>
        <label>All Inspector Mgmt Requests</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>My_Request_Is_Related_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Under Consideration,In Progress,Ready for Review</value>
        </filters>
        <filters>
            <field>Assigned_Owner__c</field>
            <operation>equals</operation>
            <value>dorothy robertson</value>
        </filters>
        <label>All Open Requests</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Requests_and_Inquiries</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Escalation_Date__c</columns>
        <columns>Escalate__c</columns>
        <columns>My_Request_Is_Related_To__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Created_By_Profile__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Additional_Details_Regarding_My_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Salesforce_Request__c.Ops_Help</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>My_Request_Is_Related_To__c</field>
            <operation>equals</operation>
            <value>&quot;Re-Run, Pricing or Trim&quot;</value>
        </filters>
        <label>All Ops Help Requests and Inquiries</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Salesforce_Requests</fullName>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>My_Request_Is_Related_To__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Salesforce_Request__c.Salesforce_Request</value>
        </filters>
        <filters>
            <field>My_Request_Is_Related_To__c</field>
            <operation>notEqual</operation>
            <value>&quot;Analytics, Reporting, and List Views&quot;,Field Service Lightning,Duplicate Account</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>notEqual</operation>
            <value>Kelley Bartlett</value>
        </filters>
        <label>All Open Salesforce Requests</label>
    </listViews>
    <listViews>
        <fullName>All_Quick_Close_Requests_and_Inquiries</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>My_Request_Is_Related_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Salesforce_Request__c.Quick_Close</value>
        </filters>
        <label>All Quick Close Requests and Inquiries</label>
    </listViews>
    <listViews>
        <fullName>Analytics_Core_Requests</fullName>
        <columns>NAME</columns>
        <columns>Additional_Details_Regarding_My_Request__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Salesforce_Request__c.Salesforce_Request</value>
        </filters>
        <filters>
            <field>My_Request_Is_Related_To__c</field>
            <operation>equals</operation>
            <value>&quot;Analytics, Reporting, and List Views&quot;</value>
        </filters>
        <filters>
            <field>Related_Departments__c</field>
            <operation>includes</operation>
            <value>Analytics</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Analytics-Core Requests</label>
    </listViews>
    <listViews>
        <fullName>Andrew_s_Assigned_Tickets</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Andrew H</value>
        </filters>
        <label>Andrew&apos;s Assigned Tickets</label>
    </listViews>
    <listViews>
        <fullName>Arbitration_Open_Requests_Inquiries</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Escalate__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Request_Is_Related_To__c</field>
            <operation>equals</operation>
            <value>Arbitration</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Salesforce_Request__c.Ops_Help</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Arbitration Open Requests &amp; Inquiries</label>
    </listViews>
    <listViews>
        <fullName>Arbitration_Team_Requests</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requester_Profile__c</field>
            <operation>contains</operation>
            <value>Arbitration</value>
        </filters>
        <label>Arbitration Team Requests</label>
        <sharedTo>
            <role>Arbitration_Administrator</role>
            <role>Arbitration_Experience_Manager</role>
            <role>Arbitration_Experience_Rep</role>
            <role>Arbitration_Manager</role>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Brief Request Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests &amp; Inquiries</pluralLabel>
    <recordTypes>
        <fullName>Customer_Success</fullName>
        <active>true</active>
        <description>Used for Customer Experience Team</description>
        <label>Customer Success</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inspector_Workforce_Management</fullName>
        <active>true</active>
        <description>Used for VCI training and scheduling requests in FSL</description>
        <label>Inspector Workforce Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ops_Help</fullName>
        <active>true</active>
        <description>Used for reaching the Operations teams such as Recommended Pricing, Titles, Arbitrations and other internal teams.</description>
        <label>Ops Help</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quick_Close</fullName>
        <active>true</active>
        <description>Used for phone entries of quick questions from the field</description>
        <label>Quick Close</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Request</fullName>
        <active>true</active>
        <description>Used for request related to the use of Salesforce, such as a bug, Duplicate Account or development request.</description>
        <label>Salesforce Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transport_Payments</fullName>
        <active>true</active>
        <description>Used for Transportation team to request payment related updates to credits and invoices.</description>
        <label>Transport Payments</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unwind</fullName>
        <active>true</active>
        <description>Used for processing an unwind request</description>
        <label>Unwind</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Add_Related_Field_Before_Closing</fullName>
        <active>true</active>
        <description>Must add the field the Request and Inquiry was related to before closing out the ticket.</description>
        <errorConditionFormula>IF(AND(TEXT( My_Request_Is_Related_To__c) = &apos;Incorrect or missing data&apos; ,  TEXT(Status__c)=  &apos;Closed&apos;,  TEXT(Related_Field__c) = null) , True, False)</errorConditionFormula>
        <errorMessage>Please fill out the field this request was related to. If not related to a field, select None in the Related Field Picklist.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CS_Close_Request</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName = &quot;Customer_Success&quot;,
ISPICKVAL(Status__c ,&quot;Closed&quot;),
OR( ISBLANK(Related_Account__c),
ISPICKVAL(Root_Causes__c, &quot;&quot;)
)
)</errorConditionFormula>
        <errorMessage>You must have an Account and a Root cause before closing an account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Keep_and_Delete_Account_Required</fullName>
        <active>true</active>
        <description>When selecting Duplicate Account you must fill out the Keep and Remove account fields.</description>
        <errorConditionFormula>AND(
ISBLANK( Keep_Account__c  ),ISBLANK(  RemoveAccount__c   ),
ISPICKVAL( My_Request_Is_Related_To__c , &quot;Duplicate Account&quot; )
)</errorConditionFormula>
        <errorMessage>The Keep Account and Remove Account fields must be populated when selecting Duplicate Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Buyer_Aware</fullName>
        <active>false</active>
        <description>Required to fill out &quot;Is Buyer Aware of this Unwind Request&quot; field before saving.</description>
        <errorConditionFormula>AND(ISPICKVAL( My_Request_Is_Related_To__c ,&apos;Unwind_Request&apos;),  ISPICKVAL( Buyer_Aware__c , &apos;&apos;) )</errorConditionFormula>
        <errorDisplayField>Buyer_Aware__c</errorDisplayField>
        <errorMessage>Please select answer Is Buyer Aware of this Unwind Request before saving.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Employee_Name</fullName>
        <active>true</active>
        <description>Ensures a Employee name is selected before submitting ticket</description>
        <errorConditionFormula>AND(
ISBLANK(  Employee_Name__c  ),
RecordType.DeveloperName = &quot;Inspector_Workforce_Management&quot;
)</errorConditionFormula>
        <errorMessage>Please enter &quot;Employee Name&quot; to save</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Employee_Status</fullName>
        <active>true</active>
        <description>Ensures Request employee status is filled out when requests are in rejected status</description>
        <errorConditionFormula>AND(
 ISBLANK(TEXT(Requested_Employment_Status__c)),
ISPICKVAL(My_Request_Is_Related_To__c, &quot;Employment Status Request&quot;),
RecordType.DeveloperName = &quot;Inspector_Workforce_Management&quot;
)</errorConditionFormula>
        <errorMessage>Please enter &quot;Requested Employment Status&quot; field before saving.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Region_of_Employee</fullName>
        <active>true</active>
        <description>Ensures a Region of Employee is selected before submitting ticket</description>
        <errorConditionFormula>AND(
ISBLANK(   Region_of_Employee__c   ),
RecordType.DeveloperName = &quot;Inspector_Workforce_Management&quot;
)</errorConditionFormula>
        <errorMessage>Please enter &quot;Region of Employee&quot; to save</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Rejection_Reason</fullName>
        <active>true</active>
        <description>Ensures rejection reason is filled out when requests are in rejected status</description>
        <errorConditionFormula>AND(
ISBLANK(   Rejected_Reason__c   ),
 ISPICKVAL( Status__c , &quot;Rejected&quot;),
RecordType.DeveloperName = &quot;Inspector_Workforce_Management&quot;
)</errorConditionFormula>
        <errorMessage>Please enter &quot;Rejected Reason&quot; field before saving with rejected status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Request_Reasons</fullName>
        <active>true</active>
        <description>Ensures a request reason is selected before submitting ticket</description>
        <errorConditionFormula>AND(
ISBLANK( Request_Reasons__c ),
RecordType.DeveloperName = &quot;Ops_Help&quot;
)</errorConditionFormula>
        <errorDisplayField>Request_Reasons__c</errorDisplayField>
        <errorMessage>Please select any Request Reasons related to this request before saving</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Territory_of_Employee</fullName>
        <active>true</active>
        <description>Ensures a Territory of Employee is selected before submitting ticket</description>
        <errorConditionFormula>AND(
ISBLANK(  Territory_of_Employee__c   ),
RecordType.DeveloperName = &quot;Inspector_Workforce_Management&quot;
)</errorConditionFormula>
        <errorMessage>Please enter &quot;Territory of Employee&quot; to save</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Training_and_Days</fullName>
        <active>true</active>
        <description>Must fill in the select pick list field for workforce management record type</description>
        <errorConditionFormula>AND(
ISBLANK(  Training_Type_Days_Prefered__c  ),
RecordType.DeveloperName = &quot;Inspector_Workforce_Management&quot;
)</errorConditionFormula>
        <errorMessage>Must complete &quot;Training / Days Prefered or Available&quot; field to save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Vehicle_Location_Confirmation</fullName>
        <active>false</active>
        <description>Required to fill out &quot;Has the vehicle location been confirmed?&quot; field before saving.</description>
        <errorConditionFormula>AND(ISPICKVAL( My_Request_Is_Related_To__c ,&apos;Unwind_Request&apos;),  ISPICKVAL(  Vehicle_Location_Confirmed__c  , &apos;&apos;) )</errorConditionFormula>
        <errorDisplayField>Vehicle_Location_Confirmed__c</errorDisplayField>
        <errorMessage>Please select answer Has the vehicle location been confirmed? before saving.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Empty_Brief_Descriptions</fullName>
        <active>true</active>
        <description>Validation rule that will prevent users from submitting an R&amp;I with the &quot;brief description&quot; field filled in including instances where users will add a few spaces to bypass the current &quot;IsBlank&quot; requirement.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &quot;Salesforce_Request&quot;,
OR(LEN(Additional_Details_Regarding_My_Request__c) = 0))</errorConditionFormula>
        <errorMessage>Field &quot;Additional Details Regarding My Request&quot; must contain a valid text. Spaces and/or no entry within this field is not permitted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Related_Departments</fullName>
        <active>true</active>
        <description>Validates that after Sumbitted status the report source is filled out.</description>
        <errorConditionFormula>AND(
  ISPICKVAL( Status__c , &quot;in progress&quot; )|| ISPICKVAL( Status__c , &quot;Under Consideration&quot; )|| ISPICKVAL( Status__c , &quot;Ready for Review&quot; )|| ISPICKVAL( Status__c , &quot;Closed&quot; ),
  ISBLANK( Related_Departments__c ),
ISPICKVAL(  My_Request_Is_Related_To__c , &quot;Analytics, Reporting, and List Views&quot; )
)</errorConditionFormula>
        <errorMessage>Please select all departments related to this request before saving</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Report_Source</fullName>
        <active>true</active>
        <description>Validates that after Sumbitted status the report source is filled out.</description>
        <errorConditionFormula>AND( 
ISPICKVAL( Status__c , &quot;in progress&quot; )|| ISPICKVAL( Status__c , &quot;Under Consideration&quot; )|| ISPICKVAL( Status__c , &quot;Ready for Review&quot; )|| ISPICKVAL( Status__c , &quot;Closed&quot; ), 
ISBLANK(TEXT(  Report_Source__c)), 
ISPICKVAL( My_Request_Is_Related_To__c , &quot;Analytics, Reporting, and List Views&quot; ) 
)</errorConditionFormula>
        <errorMessage>Please select Report Source before saving</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ticket_Outcome_Details</fullName>
        <active>true</active>
        <description>To move Status to &quot;Closed&quot; Ticket Outcome details must be entered</description>
        <errorConditionFormula>AND (ISPICKVAL(Status__c ,&quot;Closed&quot;),  RecordType.DeveloperName = &quot;Salesforce Request&quot;, Ticket_Outcome_Details__c =&quot;&quot;)</errorConditionFormula>
        <errorMessage>Add Ticket Outcome Details before changing Status to closed</errorMessage>
    </validationRules>
</CustomObject>